Add SecurityConfiguration for soffit, whith anonymous test page
l'url /hello est utilisé pour tester.
la page static index de test n'utilise pas les autorisations pour les la
soffit.
les tests (methode post) sur une page static oblige à la suppression du
csrf. À remettre peut être dans un usage normal.

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>org.jasig.portal</groupId>
+    		<artifactId>uPortal-soffit-renderer</artifactId>
+    	<version>5.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+ 
 	</dependencies>
 
 	<build>
